--- a/pages/database.html
+++ b/pages/database.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../styles/database.css">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <script src="database.js" defer></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +18,12 @@
         <a href="#connect">Find a charity</a>
         <a href="#faqs">FAQs</a>
         <a href="#contact">Contact us</a>
+    </div>
+
+    <h1>Charities</h1>
+    <div id="charities">
+    </div>
+
     </div>
 </body>
 </html>
