--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <div class="introduction">
                 <h1>Flach</h1>
                 <h2>Connecting you to charities</h2>
-                <p class="button">find a charity</p>
+                <a href="pages/database.html">
+                    <p class="button">find a charity</p>
+                </a>
             </div>
             <!-- <img src="images/bannernhom.jpg" width="500px" height=auto> -->
         </div>
